# iccad2016uffs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  benchmarksTable.markdown  test.markdown
app/: CMakeLists.txt  iccad2016solve.cxx  test_parser_fields.cxx
include/: bdd_graph_builder.hpp  bdd_model.hpp  data_model.hpp  equivalence_check.hpp  graph_algorithm.hpp  graph_model.hpp  graph_model_arbitrary.hpp  graph_simulator.hpp  icarus_simulator.hpp  iccad2016Bsolution.hpp  inputs_generator.hpp  nand_bdd_adapter.hpp  nand_minimizer.hpp  simulation_model.hpp  verilog_graph_adapter.hpp  verilog_model.hpp  verilog_parser.hpp  verilog_simulator.hpp
lib/: CMakeLists.txt  verilog_model.cxx  verilog_parser.cxx
src/: verilog_parser.hpp
test/: CMakeLists.txt  benchmarksTable.markdown  cir1.v  converts_a_verilog_to_a_graph.cxx  simulation.cxx  test_bdd.cxx  test_bdd_minimize.cxx  test_parser_1.cxx  test_rapidcheck.cxx  test_simulate_graph.cxx  test_simulate_icarus.cxx  test_spirit_1.cxx  teste.txt
testcases/BDD/: in_1.v  in_2.v
testcases/BDD_wrong/: in_2.v
testcases/newTest/: in_1.v
testcases/trivial/: and1.v  and2.v  buf1.v  nand1.v  not1.v  or1.v
testcases/unit6_removed/: in_1.v
